cif/org.eclipse.escet.cif.tests/tests/checks/AutOnlyWithOneInitLocCheck.cif.check.err
WARNING: File "checks/AutOnlyWithOneInitLocCheck.cif": Semantic warning at line 30, column 13: Automaton "auts.no_init_loc" has no initial location.
WARNING: File "checks/AutOnlyWithOneInitLocCheck.cif": Semantic warning at line 31, column 14: Location "l1" is not reachable from any of the initial locations of automaton "auts.no_init_loc".
WARNING: File "checks/AutOnlyWithOneInitLocCheck.cif": Semantic warning at line 34, column 14: Location "l2" is not reachable from any of the initial locations of automaton "auts.no_init_loc".
WARNING: File "checks/AutOnlyWithOneInitLocCheck.cif": Semantic warning at line 36, column 14: Location "l3" is not reachable from any of the initial locations of automaton "auts.no_init_loc".
WARNING: File "checks/AutOnlyWithOneInitLocCheck.cif": Semantic warning at line 92, column 17: Automaton "autdefs.no_init_loc" has no initial location.
WARNING: File "checks/AutOnlyWithOneInitLocCheck.cif": Semantic warning at line 93, column 14: Location "l1" is not reachable from any of the initial locations of automaton "autdefs.no_init_loc".
WARNING: File "checks/AutOnlyWithOneInitLocCheck.cif": Semantic warning at line 96, column 14: Location "l2" is not reachable from any of the initial locations of automaton "autdefs.no_init_loc".
WARNING: File "checks/AutOnlyWithOneInitLocCheck.cif": Semantic warning at line 98, column 14: Location "l3" is not reachable from any of the initial locations of automaton "autdefs.no_init_loc".
WARNING: File "checks/AutOnlyWithOneInitLocCheck.cif": Semantic warning at line 144, column 47: Location parameter "loc_params_one_initial.a" is not used anywhere in the specification.
WARNING: File "checks/AutOnlyWithOneInitLocCheck.cif": Semantic warning at line 144, column 50: Location parameter "loc_params_one_initial.b" is not used anywhere in the specification.
WARNING: File "checks/AutOnlyWithOneInitLocCheck.cif": Semantic warning at line 149, column 15: Automaton "loc_params_no_initial" has no initial location.
WARNING: File "checks/AutOnlyWithOneInitLocCheck.cif": Semantic warning at line 149, column 46: Location parameter "loc_params_no_initial.a" is not used anywhere in the specification.
WARNING: File "checks/AutOnlyWithOneInitLocCheck.cif": Semantic warning at line 149, column 49: Location parameter "loc_params_no_initial.b" is not used anywhere in the specification.
ERROR: CIF checks tester failed due to unsatisfied preconditions:
  -----------------------------------------------
  (1/4) Automaton has multiple initial locations.
  -----------------------------------------------
   * In group "autdefs":
     - automaton def two_init_loc():
                     ^
     - automaton def three_init_loc():
                     ^
   * In group "auts":
     - automaton two_init_loc:
                 ^
     - automaton three_init_loc:
                 ^
  ----------------------------------------
  (2/4) Automaton has no initial location.
  ----------------------------------------
   * In the top-level scope of the specification:
     - automaton def loc_params_no_initial(location a; location b):
                     ^
   * In group "autdefs":
     - automaton def no_init_loc():
                     ^
   * In group "auts":
     - automaton no_init_loc:
                 ^
  -------------------------------------------------------------------------------------------------------------------------------------------------------
  (3/4) Failed to determine whether a location is an initial location, as evaluating one of its initialization predicates results in an evaluation error.
  -------------------------------------------------------------------------------------------------------------------------------------------------------
   * In location "autdefs.init_pred_eval_error_named_loc.loc":
     - initial 1 / 0 = 0.0;
                 ^
   * In automaton definition "autdefs.init_pred_eval_error_nameless_loc":
     - initial 1 / 0 = 0.0;
                 ^
   * In location "auts.init_pred_eval_error_named_loc.loc":
     - initial 1 / 0 = 0.0;
                 ^
   * In automaton "auts.init_pred_eval_error_nameless_loc":
     - initial 1 / 0 = 0.0;
                 ^
  --------------------------------------------------------------------------------------------------------------------------------------------
  (4/4) Failed to determine whether a location is an initial location, as one of its initialization predicates cannot be statically evaluated.
  --------------------------------------------------------------------------------------------------------------------------------------------
   * In location "autdefs.init_pred_non_static_eval_named_loc.loc":
     - initial zero() = 0;
                      ^
   * In automaton definition "autdefs.init_pred_non_static_eval_nameless_loc":
     - initial zero() = 0;
                      ^
   * In location "auts.init_pred_non_static_eval_named_loc.loc":
     - initial zero() = 0;
                      ^
   * In automaton "auts.init_pred_non_static_eval_nameless_loc":
     - initial zero() = 0;
                      ^
